--- a/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
+++ b/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
@@ -1,14 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - One DigiTrust </title>
+    <title>@ViewData["Title"] - One DigiTrust  </title>
+   @*  RÉPUBLIQUE DU TCHAD
+    Ministère des communications, de l'économie numérique et de la digitalisation de l'administration *@
+   
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link href="~/css/layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SecureDocumentPdf.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <div class="logo-tchad">
+        <img src="~/images/logo_ministere_1.png" />
+    </div>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
