--- a/SecureDocumentPdf/Pages/Index.cshtml
+++ b/SecureDocumentPdf/Pages/Index.cshtml
@@ -13,7 +13,8 @@
                 MTENDA - TCHAD
             </h1>
             <div>
-                <img src="~/images/barre_tchad-removebg-preview.png" />
+                <img src="@(Url.Content("~/images/barre_tchad-removebg-preview.png"))" alt="Image" />
+                @* <img src="~/images/barre_tchad-removebg-preview.png" /> *@
             </div>
             <p class="lead text-muted fs-5">
                 Convertissez et sécurisez vos documents (Word, Excel, PowerPoint, Images, PDF...) avec protection maximale
