--- a/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
+++ b/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - One DigiTrust  </title>
-   @*  RÉPUBLIQUE DU TCHAD
+    <title>@ViewData["Title"] - One DigiTrust </title>
+    @*  RÉPUBLIQUE DU TCHAD
     Ministère des communications, de l'économie numérique et de la digitalisation de l'administration *@
-   
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -16,40 +16,45 @@
     <link rel="stylesheet" href="~/SecureDocumentPdf.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="logo-tchad">
-        <img src="~/Images/logo_ministere_1.png" />
-    </div>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">One DigiTrust </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand d-flex align-items-center" asp-area="" asp-page="/Index">
+                    <img src="@(Url.Content("~/images/logo_ministere_1.png"))"
+                         alt="Logo"
+                         style="height: 80px; width: auto; margin-right: 10px;" />
+                    <span>One DigiTrust</span>
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li> *@
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-   @*  <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - SecureDocumentPdf - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+    @*  <footer class="border-top footer text-muted">
+    <div class="container">
+    &copy; 2025 - SecureDocumentPdf - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    </div>
     </footer> *@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
