--- a/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
+++ b/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link href="~/css/layout.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SecureDocumentPdf.styles.css" asp-append-version="true" />
+    @* @RenderSection("Scripts", required: false) *@
 </head>
 <body>
     <header>
@@ -36,9 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        @* <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li> *@
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PdfViewer">PdfViewer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Transfer">📤 Transfert Fichiers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -61,6 +65,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
+     @await RenderSectionAsync("Scripts", required: false)
+ </body>
 </html>
