Suppression du logo du Tchad

--- a/SecureDocumentPdf/Pages/Index.cshtml
+++ b/SecureDocumentPdf/Pages/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="text-center mb-5">
             <h1 class="display-5 text-primary mb-3 fw-bold">
                 <i class="fas fa-shield-alt me-3"></i> 
-                MTENDA - TCHAD
+                @* MTENDA - TCHAD *@  
             </h1>
             <div>
                 @* <img src="@(Url.Content("~/Images/barre_tchad-Photoroom.png"))" alt="Image" /> *@
