--- a/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
+++ b/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" asp-area="" asp-page="/Index">
-                    <img src="@(Url.Content("~/Images/logo_ministere_1.png"))"
+                    <img src="@(Url.Content("~/Images/IZEM.jpg"))"
                          alt="Logo"
                          style="height: 80px; width: auto; margin-right: 10px;" />
-                    <span>One DigiTrust</span>
+                    @* <span>One DigiTrust</span> *@
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
