Remise du logo One Digitrust

--- a/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
+++ b/SecureDocumentPdf/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <img src="@(Url.Content("~/Images/IZEM.jpg"))"
                          alt="Logo"
                          style="height: 80px; width: auto; margin-right: 10px;" />
-                    @* <span>One DigiTrust</span> *@
+                    <span>One DigiTrust</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
